--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/Users/real/dotfiles/vimfiles/vundle.git"]
-	path = /Users/real/dotfiles/vimfiles/vundle.git
+[submodule "/Users/real/dotfiles/.vim/bundle/vundle"]
+	path = /Users/real/dotfiles/.vim/bundle/vundle
 	url = http://github.com/gmarik/vundle.git
